# gifbolt

./: .clang-format  .clang-tidy  .codespellrc  .editorconfig  .gitignore  .llm  .mdl-config.json  .pre-commit-config.yaml  404.html  BRIEF.md  CMakeLists.txt  COMMITS.md  LICENSE  MIGRATION.md  OPTIMIZATION_SUMMARY.md  PIXEL_BUFFER_REFACTORING.md  PIXEL_BUFFER_USAGE_EXAMPLES.cs  README.md  agents.md  analyze_frame_dumps.py  deploy-dlls.ps1  docfx.json  index.html  mkdocs.yml  output.txt  requirements.txt  sitemap.xml  stderr.txt  stderr_debug.txt  test_gif_decode.cpp  test_load.cs
.github/: copilot-instructions.md
.github/agents/: code-reviewer.md  devops-engineer.md
.github/workflows/: build-and-test.yml  build-native.yml  docs.yml  publish-nuget.yml  static.yml
VERSION_API/: index.html
api/cpp/: D3D11DeviceCommandContext_8cpp_source.html  D3D11DeviceCommandContext_8h_source.html  DummyDeviceCommandContext_8cpp_source.html  DummyDeviceCommandContext_8h_source.html  GifBoltRenderer_8cpp_source.html  GifBoltRenderer_8h_source.html  GifDecoder_8cpp_source.html  GifDecoder_8h_source.html  IDeviceCommandContext_8h_source.html  ITexture_8h_source.html  MemoryPool_8h_source.html  MetalDeviceCommandContext_8h_source.html  MetalDeviceCommandContext_8mm_source.html  PixelConversion_8h_source.html  PixelFormat_8h_source.html  ScalingFilter_8h_source.html  ThreadPool_8h_source.html  annotated.html  annotated_dup.js  classGifBolt_1_1GifBoltRenderer-members.html  classGifBolt_1_1GifBoltRenderer.html  classGifBolt_1_1GifBoltRenderer.js  classGifBolt_1_1GifDecoder-members.html  classGifBolt_1_1GifDecoder.html  classGifBolt_1_1GifDecoder.js  classGifBolt_1_1Memory_1_1ArenaAllocator-members.html  classGifBolt_1_1Memory_1_1ArenaAllocator.html  classGifBolt_1_1Memory_1_1ArenaAllocator.js  classGifBolt_1_1Memory_1_1FrameMemoryPool-members.html  classGifBolt_1_1Memory_1_1FrameMemoryPool.html  classGifBolt_1_1Memory_1_1FrameMemoryPool.js  classGifBolt_1_1Memory_1_1SmallVector-members.html  classGifBolt_1_1Memory_1_1SmallVector.html  classGifBolt_1_1Memory_1_1SmallVector.js  classGifBolt_1_1Renderer_1_1DummyDeviceCommandContext-members.html  classGifBolt_1_1Renderer_1_1DummyDeviceCommandContext.html  classGifBolt_1_1Renderer_1_1DummyDeviceCommandContext.js  classGifBolt_1_1Renderer_1_1DummyDeviceCommandContext__coll__graph.map  classGifBolt_1_1Renderer_1_1DummyDeviceCommandContext__coll__graph.md5  classGifBolt_1_1Renderer_1_1IDeviceCommandContext-members.html  (+74 more)
api/cpp/search/: all_0.js  all_11.js  all_3.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  defines_0.js  files_0.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_9.js  functions_a.js  functions_b.js  functions_c.js  functions_d.js  (+11 more)
docs/: VERSION_API.md  index.md
patches/: 0001-fix-Implement-AnimationBehavior-for-100-XamlAnimated.patch  0002-feat-Implement-lazy-frame-caching-to-fix-memory-expl.patch  0003-refactor-Remove-custom-GifBoltControl-and-update-sam.patch  0004-docs-Remove-issues-analysis-document.patch  0005-perf-Optimize-Avalonia-bitmap-updates-to-avoid-recre.patch  0006-refactor-Extract-common-animation-logic-to-GifAnimat.patch  0007-refactor-Redesign-Avalonia-sample-UI-to-match-WPF-pa.patch  0008-fix-Make-Avalonia-sample-identical-to-WPF-sample-and.patch  0009-fix-Synchronize-frame-advancement-with-actual-frame-.patch  0010-feat-Wire-up-GPU-compute-shader-for-pixel-format-con.patch  0011-fix-Remove-redundant-GPU-conversion-decoder-already-.patch
samples/GifBolt.AvaloniaApp/: App.axaml  App.axaml.cs  GifBolt.AvaloniaApp.csproj  Program.cs  ViewLocator.cs  app.manifest
samples/GifBolt.NativeSDL2Sample/: CMakeLists.txt  README.md  main.c
samples/GifBolt.SampleApp/: App.xaml  App.xaml.cs  AttachedPropertiesWindow.xaml  AttachedPropertiesWindow.xaml.cs  GifBolt.SampleApp.csproj  MainWindow.xaml  MainWindow.xaml.cs  README.md
scripts/: collect-artifacts.sh
search/: search_index.json
src/GifBolt.Avalonia/: AnimationBehavior.cs  GifAnimationController.cs  GifBolt.Avalonia.csproj  GifBoltControl.cs  ImageBehavior.cs  README.md
src/GifBolt.Core/: CountRepeatStrategy.cs  DecoderHandle.cs  ForeverRepeatStrategy.cs  FrameAdvanceHelper.cs  FrameTimingHelper.cs  GifAnimationControllerBase.cs  GifBolt.Core.csproj  GifBolt.targets  GifPlayer.cs  GlobalSuppressions.cs  IRepeatStrategy.cs  Interop.cs  MetadataRepeatStrategy.cs  Native.cs  NativeVersion.cs  PixelBuffer.cs  README.md  RepeatBehaviorHelper.cs  RepeatStrategyFactory.cs  StretchHelper.cs  libGifBolt.Native.dylib
src/GifBolt.Native/: CMakeLists.txt  Doxyfile
src/GifBolt.Native/include/: D3D11DeviceCommandContext.h  D3D9ExDeviceCommandContext.h  D3D9ExTexture.h  DebugLog.h  DummyDeviceCommandContext.h  GifBoltRenderer.h  GifDecoder.h  IDeviceCommandContext.h  ITexture.h  MemoryPool.h  MetalDeviceCommandContext.h  PixelBuffer.h  PixelConversion.h  PixelFormat.h  ScalingFilter.h  ThreadPool.h  gifbolt_c.h  gifbolt_version.h
src/GifBolt.Native/shaders/: PixelConversion.hlsl  PixelConversion.metal  ScalingShaders.metal
src/GifBolt.Native/src/: D3D11DeviceCommandContext.cpp  D3D9ExDeviceCommandContext.cpp  D3D9ExTexture.cpp  DummyDeviceCommandContext.cpp  GifBoltRenderer.cpp  GifDecoder.cpp  MetalDeviceCommandContext.mm  PixelBuffer.cpp  gifbolt_c.cpp  gifbolt_version.cpp
src/GifBolt.Wpf/: AnimationBehavior.cs  GifAnimationController.cs  GifAnimationControllerD3D.cs  GifBolt.Wpf.csproj  GifBoltControl.cs  GifRenderMode.cs  GifSourceResolver.cs  GlobalSuppressions.cs  ImageBehavior.cs  README.md  app.config
tests/: CMakeLists.txt  GPUProfilingTests.cpp  GifBoltRendererTests.cpp  GifDecoderTests.cpp  GifProfilingTests.cpp  PrefetchTests.cpp  ScalingFilterBenchmarks.cpp  ThreadPoolBenchmarks.cpp
tests/GifBolt.Core.Tests/: GifBolt.Core.Tests.csproj  GifPlayerTests.cs  README.md
tests/assets/: README.md
(+5 files in other folders)
